--- a/src/app/modules/deck/deck.component.html
+++ b/src/app/modules/deck/deck.component.html
@@ -210,7 +210,7 @@
       <div class="row row-cols-1 row-cols-sm-1 row-cols-md-1 row-cols-lg-2">
         <ul class="col list-group" *ngFor="let crypt of deck.crypt">
           <app-crypt [card]="crypt" [cryptSize]="deck.stats.crypt" (click)="openCryptCard(crypt, deck.crypt!)"
-            [disablePopover]="(isMobileOrTablet$ | async)!"></app-crypt>
+            [disablePopover]="(isMobileOrTablet$ | async)!" [disableClickPopover]="true"></app-crypt>
         </ul>
       </div>
     </div>
